return token, edit and delete paths

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,3 @@
 // using this URI to connect to Mongo Db
 MONGO_URL=mongodb+srv://marceloAdmin:Minhasenha1@cluster0.q7slhkk.mongodb.net/?retryWrites=true&w=majority
+TOKEN_SECRET=secret
